--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 5.2
+ * @version 5.3
  */
 
 /* Main Background */
@@ -240,7 +240,8 @@
     border-width: 2px;
 }
 
-.contentWrapper-3vHNP2 {
+.contentWrapper-3vHNP2,
+.contentWrapper-2f9yME {
     background-color: transparent !important;
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
     box-shadow: none;
@@ -971,11 +972,11 @@
     font-weight: bold;
 }
 
-.profileBadges-31rDHI {
+.profileBadges-2pItdR {
     background-color: rgba(0, 0, 0, .2);
 }
 
-.userProfileOuterUnthemed-2b2rsv {
+.userProfileOuterUnthemed-11rPfA {
     background-color: transparent;
 }
 
@@ -983,11 +984,11 @@
     border: 1px solid transparent;
 }
 
-.overlayBackground-1KgwVi {
+.overlayBackground-2aa7wt {
     background-color: transparent;
 }
 
-.userPopoutOuter-3AVBmJ {
+.userPopoutOuter-1OHwPL {
     box-shadow: none;
 }
 
@@ -995,27 +996,27 @@
     border-radius: 5px;
 }
 
-.userProfileInner-3F03PX:before {
+.userProfileInner-1ngKnf:before {
     background-color: transparent;
 }
 
-.userProfileInnerThemedNonPremium-1gT-zY {
+.userProfileInnerThemedNonPremium-2AJg-H {
     background-color: transparent !important;
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
 
-.userProfileInnerThemedWithBanner-2624Yx,
-.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
+.userProfileInnerThemedWithBanner-25XGmz,
+.userProfileInnerThemedPremiumWithoutBanner-lZ9inp {
     background-color: transparent !important;
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
 
-.userProfileOuterThemed-3EfHmv.userPopoutOuter-3AVBmJ, 
-.userProfileOuterThemed-3EfHmv.userProfileOuter-1K_BYU {
+.userProfileOuterThemed-2BgJCM.userPopoutOuter-1OHwPL, 
+.userProfileOuterThemed-2BgJCM.userProfileOuter-1K_BYU {
     background: none;
 }
 
-.userProfileInner-3F03PX {
+.userProfileInner-1ngKnf {
     border-radius: 5px 5px 0 0;
 }
 
@@ -1464,7 +1465,8 @@
     background-color: transparent;
 }
 
-.navButtonActive-1EqC5l {
+.navButtonActive-1EqC5l,
+.navButtonActive-fwiUKp {
     background-color: #912;
     border: 2px outset #912;
 }
@@ -1694,11 +1696,11 @@
     background-color: transparent;
 }
 
-.listRow-Y5zoF8:hover {
+.listRow-2nO1T6:hover {
     background-color: rgba(0,0,0,.3);
 }
 
-.listRow-Y5zoF8 {
+.listRow-2nO1T6 {
     color: white;
     border-radius: 4px;
 }
@@ -1708,7 +1710,7 @@
 }
 
 
-.connectedAccountContainer-2TWiXT {
+.connectedAccountContainer-3aLMHJ {
     border: 2px ridge #C13;
     background-color: rgba(153, 17, 33, .77);
     border-radius: 6px;
@@ -2979,27 +2981,27 @@ border-top-color: #912;
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
+.avatarWrapper-eenWra circle, .avatar-3QF_VA.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
 
-.customStatus-3Bvsdb,
-.userTagUsernameNoNickname-2e_xaO,
-.discordIcon-JXet1k,
+.customStatus-19KW6v,
+.userTagUsernameNoNickname-2lKUnI,
+.discordIcon-32mgeP,
 .roleName-2ZJJYR,
-.username-28Thtk,
+.username-3dP0mA,
 .actionButton-1YKTU0 {
     color: white;
 }
@@ -3009,12 +3011,12 @@ border-top-color: #912;
   color: white!important;
 }
 
-.badgeList-2pMvZX {
+.badgeList-2aoHPw {
     background-color: rgba(0, 0, 0, .6);
 }
 
-.discrimBase-KriZSj,
-.discriminator-3_S3CG {
+.discrimBase-v65kTs,
+.discriminator-hnHkyt {
     color: #d4d4d4;
 }
 
@@ -3560,7 +3562,7 @@ border-top-color: #912;
     color: #FFF88D;
 }
 
-.note-3TX9O7 textarea:focus {
+.note-3M15gE textarea:focus {
     background-color: rgba(0, 0, 0, .09);
 }
 
@@ -4167,7 +4169,7 @@ border-top-color: #912;
 }
 
 .wrapper-wOVKdL,
-.paymentNote-1JTD1J {
+.paymentNote-3dcb-Z {
   background-color: transparent;
 }
 
@@ -4226,6 +4228,50 @@ border-top-color: #912;
     background-color: transparent!important;
 }
 
+.changelog-2zmJ4c,
+.safetyChecklist-3kgSZf,
+.simpleItemWrapper-1Zwc4I {
+  background-color: rgba(0, 0, 0, .7);
+  border: 2px solid rgba(255, 255, 255, .4);
+}
+
+.divider-3gqVNH {
+  background-color: transparent;
+}
+
+
+.valuePill-3nbVvY {
+  background-color: rgba(0, 0, 0, .5);
+  border: 2px solid rgba(255, 255, 255, .4);
+  color: white !important;
+}
+
+.itemBodyInner-3iVT92,
+.rulesScreeningItems-24b_s9>div {
+  border: none;
+}
+
+.bar-1GpknY {
+  background-color: transparent;
+}
+
+.themed-1LCNAV .barInner-3dHef4 {
+  background-color: rgba(255, 255, 255, .6);
+}
+
+.themed-1LCNAV .textLeft-1Noen0, 
+.themed-1LCNAV .textRight-2IW704 {
+  color: white;
+}
+
+.noIcon-3gSX9V {
+    background-color: rgba(0, 0, 0, .2);
+    color: white;
+}
+
+.theme-dark .activityUserPopoutV2-3eKqzY .headerText-3g1XK9 {
+    color: white;
+}
 
 /* Main Color */
 .main-color{color: #912;}
