--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 4.8
+ * @version 4.9
  */
 
  #app-mount .app-2CXKsg {
@@ -1789,7 +1789,8 @@
 }
 
 
-.navButtonActive-1EqC5l {
+.navButtonActive-1EqC5l,
+.navButtonActive-fwiUKp {
   border-left: none;
   background: #212121;
   box-shadow: none;
@@ -1800,14 +1801,10 @@
   color: white;
 }
 
-
-.navButtonActive-1EqC5l:hover {
-  background: #ad3950;
-}
-
-
-
-.navButtonActive-1EqC5l.active, .navButtonActive-1EqC5l.active:hover {
+.navButtonActive-1EqC5l, 
+.navButtonActive-1EqC5l:hover,
+.navButtonActive-fwiUKp, 
+.navButtonActive-fwiUKp:hover {
   background-color: #9b2742;
 }
 
@@ -1821,7 +1818,8 @@
 }
 
 .contentWrapper-3vHNP2,
-.emojiPicker-6YCk8a {
+.emojiPicker-6YCk8a,
+.contentWrapper-2f9yME {
   border-radius: 0 0 7px 7px;
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
@@ -2153,26 +2151,26 @@
   background-color: transparent;
 }
 
-.tabBarContainer-2UG0vy {
+.tabBarContainer-sCZC4w {
   border-bottom: none;
 }
 
-.connectedAccountContainer-2TWiXT {
+.connectedAccountContainer-3aLMHJ {
   background-color: #9b2742;
   border-radius: 5px;
   border: none;
 }
 
-.userInfoSection-1gptv0+.userInfoSection-1gptv0 {
+.userInfoSection-2u2hir+.userInfoSection-2u2hir {
   border-top: none;
 }
 
-.listRow-Y5zoF8 {
+.listRow-2nO1T6 {
   color: white;
   border: 2px solid transparent;
 }
 
-.listRow-Y5zoF8:hover {
+.listRow-2nO1T6:hover {
   background-color: rgba(155, 39, 66, .84);
   border: 2px solid #ad3950;
 }
@@ -2573,7 +2571,7 @@
   box-shadow: none;
 }
 
-.divider-1tWBgZ {
+.divider-2dDziJ {
   background-color: transparent;
 }
 
@@ -2954,16 +2952,16 @@
   border-radius: 4px;
 }
 
-.profileBadges-31rDHI {
+.profileBadges-2pItdR {
   background-color: rgba(0, 0, 0, .2);
 }
 
 
-.userProfileOuterUnthemed-2b2rsv {
+.userProfileOuterUnthemed-11rPfA {
   background-color: transparent;
 }
 
-.overlayBackground-1KgwVi {
+.overlayBackground-2aa7wt {
   background-color: transparent;
 }
 
@@ -2971,11 +2969,11 @@
   border: 1px solid transparent;
 }
 
-.userPopoutOuter-3AVBmJ {
+.userPopoutOuter-1OHwPL {
   box-shadow: none;
 }
 
-.userProfileInner-3F03PX:before {
+.userProfileInner-1ngKnf:before {
   background-color: transparent;
 }
 
@@ -2983,21 +2981,21 @@
   border-radius: 6px;
 }
 
-.userProfileInnerThemedNonPremium-1gT-zY {
+.userProfileInnerThemedNonPremium-2AJg-H {
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
 
-.userProfileInnerThemedWithBanner-2624Yx,
-.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
+.userProfileInnerThemedWithBanner-25XGmz,
+.userProfileInnerThemedPremiumWithoutBanner-lZ9inp {
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
 
-.userProfileOuterThemed-3EfHmv.userPopoutOuter-3AVBmJ, 
-.userProfileOuterThemed-3EfHmv.userProfileOuter-1K_BYU {
+.userProfileOuterThemed-2BgJCM.userPopoutOuter-1OHwPL, 
+.userProfileOuterThemed-2BgJCM.userProfileOuter-1K_BYU {
   background: none;
 }
 
-.userProfileInner-3F03PX {
+.userProfileInner-1ngKnf {
   border-radius: 6px 6px 0 0;
 }
 
@@ -3578,27 +3576,27 @@ border-top-color: #9b2742;
   background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
+.avatarWrapper-eenWra circle, .avatar-3QF_VA.wrapper-3Un6-K circle {
   fill: black;
   opacity: 1 !important;
 }
 
-.customStatus-3Bvsdb,
-.userTagUsernameNoNickname-2e_xaO,
-.discordIcon-JXet1k,
+.customStatus-19KW6v,
+.userTagUsernameNoNickname-2lKUnI,
+.discordIcon-32mgeP,
 .roleName-2ZJJYR,
-.username-28Thtk {
+.username-3dP0mA {
   color: white;
 }
 
@@ -3607,12 +3605,12 @@ border-top-color: #9b2742;
   color: white!important;
 }
 
-.badgeList-2pMvZX {
+.badgeList-2aoHPw {
   background-color: rgba(0, 0, 0, .6);
 }
 
-.discrimBase-KriZSj,
-.discriminator-3_S3CG {
+.discrimBase-v65kTs,
+.discriminator-hnHkyt {
   color: #d4d4d4;
 }
 
@@ -4103,7 +4101,7 @@ border-top-color: #9b2742;
   color: #FFF88D;
 }
 
-.note-3TX9O7 textarea:focus {
+.note-3M15gE textarea:focus {
   background-color: rgba(0, 0, 0, .09);
 }
 
@@ -4714,7 +4712,7 @@ border-top-color: #9b2742;
 }
 
 .wrapper-wOVKdL,
-.paymentNote-1JTD1J {
+.paymentNote-3dcb-Z {
   background-color: transparent;
 }
 
@@ -4774,4 +4772,49 @@ fill: white;
 
 .modalFooter-Ywt9Jo {
     background-color: transparent!important;
+}
+
+.changelog-2zmJ4c,
+.safetyChecklist-3kgSZf,
+.simpleItemWrapper-1Zwc4I {
+  background-color: rgba(0, 0, 0, .7);
+  border: 2px solid rgba(255, 255, 255, .4);
+}
+
+.divider-3gqVNH {
+  background-color: transparent;
+}
+
+
+.valuePill-3nbVvY {
+  background-color: rgba(0, 0, 0, .5);
+  border: 2px solid rgba(255, 255, 255, .4);
+  color: white !important;
+}
+
+.itemBodyInner-3iVT92,
+.rulesScreeningItems-24b_s9>div {
+  border: none;
+}
+
+.bar-1GpknY {
+  background-color: transparent;
+}
+
+.themed-1LCNAV .barInner-3dHef4 {
+  background-color: rgba(255, 255, 255, .6);
+}
+
+.themed-1LCNAV .textLeft-1Noen0, 
+.themed-1LCNAV .textRight-2IW704 {
+  color: white;
+}
+
+.noIcon-3gSX9V {
+  background-color: rgba(0, 0, 0, .2);
+  color: white;
+}
+
+.theme-dark .activityUserPopoutV2-3eKqzY .headerText-3g1XK9 {
+  color: white;
 }
