--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 2
+ * @version 2.1
 */
 
 .app-2CXKsg, 
@@ -348,18 +348,18 @@
     color: #F1F1F1;
 }
 
-.profileBadges-31rDHI,
-.badgeList-2pMvZX {
+.profileBadges-2pItdR,
+.badgeList-2aoHPw {
     background-color: rgba(0, 0, 0, .2);
 }
 
-.userProfileOuterUnthemed-2b2rsv,
-.userProfileInner-3F03PX:before,
-.overlayBackground-1KgwVi {
+.userProfileOuterUnthemed-11rPfA,
+.userProfileInner-1ngKnf:before,
+.overlayBackground-2aa7wt {
     background-color: transparent;
 }
 
-.userPopoutOuter-3AVBmJ {
+.userPopoutOuter-1OHwPL {
     box-shadow: none;
 }
 
@@ -367,42 +367,42 @@
     border-radius: 8px;
 }
 
-.userProfileInnerThemedNonPremium-1gT-zY {
+.userProfileInnerThemedNonPremium-2AJg-H {
     background-color: #282828;
     background: #282828;
 }
 
-.userProfileInnerThemedWithBanner-2624Yx,
-.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
+.userProfileInnerThemedWithBanner-25XGmz,
+.userProfileInnerThemedPremiumWithoutBanner-lZ9inp {
     background-color: #282828;
     background: #282828;
 }
 
-.userProfileOuterThemed-3EfHmv.userPopoutOuter-3AVBmJ, 
-.userProfileOuterThemed-3EfHmv.userProfileOuter-1K_BYU {
+.userProfileOuterThemed-2BgJCM.userPopoutOuter-1OHwPL, 
+.userProfileOuterThemed-2BgJCM.userProfileOuter-1K_BYU {
     background: none;
 }
 
-.userProfileInner-3F03PX {
+.userProfileInner-1ngKnf {
     border-radius: 8px 8px 0 0;
 }
 
-.divider-1tWBgZ {
+.divider-2dDziJ {
     background-color: transparent;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
+.avatarWrapper-eenWra circle, .avatar-3QF_VA.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
@@ -411,7 +411,7 @@
     color: white;
 }
 
-.rolePill-2IJ1vo {
+.rolePill-78LFtg {
     background-color: rgba(255, 255, 255, .1);
     border: 1px solid rgba(255, 255, 255, .1);
 }
@@ -442,10 +442,10 @@
     background-color: rgba(255, 255, 255, .2);
 }
 
-.note-6O4w9y textarea:focus,
+.note-1NN2aP textarea:focus,
 .input-3O04eu.focused-16iuXg, 
 .input-3O04eu:focus,
-.note-3TX9O7 textarea:focus {
+.note-3M15gE textarea:focus {
     background-color: rgba(255, 0, 0, .3);
 }
 
@@ -453,7 +453,7 @@
     background: none;
 }
 
-.tabBarContainer-2UG0vy {
+.tabBarContainer-sCZC4w {
     border-bottom: none;
 }
 
@@ -466,11 +466,11 @@
     border-bottom-color: #FF0000;
 }
 
-.listRow-Y5zoF8 {
+.listRow-2nO1T6 {
     color: #F1F1F1;
 }
 
-.listRow-Y5zoF8:hover {
+.listRow-2nO1T6:hover {
     background-color: rgba(255, 255, 255, .2);
 }
 
@@ -505,29 +505,29 @@
     color: white;
 }
 
-.userTagUsernameNoNickname-2e_xaO,
-.discordIcon-JXet1k,
-.username-28Thtk {
+.userTagUsernameNoNickname-2lKUnI,
+.discordIcon-32mgeP,
+.username-3dP0mA {
     color: white;
 }
 
-.discrimBase-KriZSj,
-.discriminator-3_S3CG {
+.discrimBase-v65kTs,
+.discriminator-hnHkyt {
     color: #F1F1F1;
 }
 
-.userInfoSection-1gptv0+.userInfoSection-1gptv0 {
+.userInfoSection-2u2hir+.userInfoSection-2u2hir {
     border-top: none;
 } 
 
-.connectedAccountContainer-2TWiXT {
+.connectedAccountContainer-3aLMHJ {
     background-color: rgba(255, 255, 255, .4);
     border-radius: 30px;
     border: none;
 }
 
-.connectedAccountNameText-3VHIcl[style*="color:"],
-.connectedAccountOpenIcon-OngaxI {
+.connectedAccountNameText-tCbPXH[style*="color:"],
+.connectedAccountOpenIcon-3i81Tz {
     color: #0F0F0F !important;
 }
 
@@ -920,7 +920,8 @@
     border-radius: 10px;
 }
 
-.contentWrapper-3vHNP2 {
+.contentWrapper-3vHNP2,
+.contentWrapper-2f9yME {
     background-color: #282828;
     border: 1px solid rgba(255, 255, 255, .2);
     border-radius: 10px;
@@ -1192,10 +1193,14 @@
     background-color: transparent;
 }
 
-.navButtonActive-1EqC5l, .navButtonActive-1EqC5l:hover {
+.navButtonActive-1EqC5l, 
+.navButtonActive-1EqC5l:hover,
+.navButtonActive-fwiUKp, 
+.navButtonActive-fwiUKp:hover {
     color: white !important;
 }
-.navButtonActive-1EqC5l {
+.navButtonActive-1EqC5l,
+.navButtonActive-fwiUKp {
     background-color: #FF0000 !important;
 }
 .navButton-1XuvI- {
@@ -4187,7 +4192,7 @@
 }
 
 .wrapper-wOVKdL,
-.paymentNote-1JTD1J {
+.paymentNote-3dcb-Z {
   background-color: transparent;
 }
 
@@ -4238,5 +4243,54 @@
 }
 
 .bd-sidebar-header h2 {
+    color: white;
+}
+
+.changelog-2zmJ4c,
+.safetyChecklist-3kgSZf,
+.simpleItemWrapper-1Zwc4I {
+  background-color: rgba(0, 0, 0, .7);
+  border: 2px solid rgba(255, 255, 255, .4);
+}
+
+.divider-3gqVNH {
+  background-color: transparent;
+}
+
+
+.valuePill-3nbVvY {
+  background-color: rgba(0, 0, 0, .5);
+  border: 2px solid rgba(255, 255, 255, .4);
+  color: white !important;
+}
+
+.itemBodyInner-3iVT92,
+.rulesScreeningItems-24b_s9>div {
+  border: none;
+}
+
+.bar-1GpknY {
+  background-color: transparent;
+}
+
+.themed-1LCNAV .barInner-3dHef4 {
+  background-color: rgba(255, 255, 255, .6);
+}
+
+.themed-1LCNAV .textLeft-1Noen0, 
+.themed-1LCNAV .textRight-2IW704 {
+  color: white;
+}
+
+.theme-dark .textContentFooter-2JnNv8 {
+    background: none;
+}
+
+.noIcon-3gSX9V {
+    background-color: rgba(0, 0, 0, .2);
+    color: white;
+}
+
+.theme-dark .activityUserPopoutV2-3eKqzY .headerText-3g1XK9 {
     color: white;
 }
