--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 4.8
+ * @version 4.9
 */
 
 @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -934,11 +934,11 @@ textarea,
     top: -1px;
 }
 
-.tabBarContainer-2UG0vy {
+.tabBarContainer-sCZC4w {
     border-top: none;
 }
 
-.userInfoSection-1gptv0+.userInfoSection-1gptv0 {
+.userInfoSection-2u2hir+.userInfoSection-2u2hir {
     border-top: none;
 }
 
@@ -946,12 +946,12 @@ textarea,
     margin-top: -40px;
 }
 
-.connectedAccountContainer-2TWiXT {
+.connectedAccountContainer-3aLMHJ {
     border-radius: 12px;
     border: 2px solid black;
 }
 
-.connectedAccountContainer-2TWiXT {
+.connectedAccountContainer-3aLMHJ {
     background-color: rgba(0, 0, 0, 0.324);
 }
 
@@ -960,11 +960,11 @@ textarea,
   color: white!important;
 }
 
-.badgeList-2pMvZX {
+.badgeList-2aoHPw {
     background-color: rgba(0, 0, 0, .6);
 }
 
-.listRow-Y5zoF8 {
+.listRow-2nO1T6 {
     color: white;
     border-radius: 11px;
     margin: 1px 0 12px 12px;
@@ -979,7 +979,7 @@ textarea,
     color: white;
 }
 
-.listRow-Y5zoF8:hover {
+.listRow-2nO1T6:hover {
     background-color: rgba(0, 140, 153, 0.208);
     border: 3px solid rgba(0, 140, 153, 0.16);
 }
@@ -1420,7 +1420,8 @@ textarea,
 }
 
 .contentWrapper-3vHNP2,
-.emojiPicker-6YCk8a {
+.emojiPicker-6YCk8a,
+.contentWrapper-2f9yME {
     background: linear-gradient(45deg, #008c99 0%, #212121 67%);
 }
 
@@ -1432,7 +1433,8 @@ textarea,
     background: none;
 }
 
-.navButtonActive-1EqC5l {
+.navButtonActive-1EqC5l,
+.navButtonActive-fwiUKp {
     background: #0e0e0e;
     border-left: none;
     box-shadow: none;
@@ -1443,11 +1445,13 @@ textarea,
     color: white;
 }
 
-.navButtonActive-1EqC5l:hover {
+.navButtonActive-1EqC5l:hover,
+.navButtonActive-fwiUKp:hover {
     background-color: #181818;
 }
 
-.navButtonActive-1EqC5l.active {
+.navButtonActive-1EqC5l:active,
+.navButtonActive-fwiUKp:active {
     background-color: #008c99 !important;
 }
 
@@ -2364,19 +2368,19 @@ textarea,
 
 /* --- */
 
-.profileBadges-31rDHI {
+.profileBadges-2pItdR {
     background-color: rgba(0, 0, 0, .2);
 }
 
-.overlayBackground-1KgwVi {
+.overlayBackground-2aa7wt {
     background-color: transparent;
 }
 
-.userProfileOuterUnthemed-2b2rsv {
+.userProfileOuterUnthemed-11rPfA {
     background-color: transparent;
 }
 
-.userPopoutOuter-3AVBmJ {
+.userPopoutOuter-1OHwPL {
     box-shadow: none;
 }
 
@@ -2388,16 +2392,16 @@ textarea,
     border-radius: 6px;
 }
 
-.userProfileInner-3F03PX:before {
+.userProfileInner-1ngKnf:before {
     background-color: transparent;
 }
 
-.userProfileInnerThemedNonPremium-1gT-zY {
+.userProfileInnerThemedNonPremium-2AJg-H {
     background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #008c99 100%);
 }
 
-.userProfileInnerThemedWithBanner-2624Yx,
-.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
+.userProfileInnerThemedWithBanner-25XGmz,
+.userProfileInnerThemedPremiumWithoutBanner-lZ9inp {
     background: linear-gradient(342deg, rgba(0, 0, 0, 1) 10%, #008c99 100%);
 }
 
@@ -2412,12 +2416,12 @@ textarea,
     color: white;
 }
 
-.userProfileOuterThemed-3EfHmv.userPopoutOuter-3AVBmJ,
-.userProfileOuterThemed-3EfHmv.userProfileOuter-1K_BYU {
+.userProfileOuterThemed-2BgJCM.userPopoutOuter-1OHwPL,
+.userProfileOuterThemed-2BgJCM.userProfileOuter-1K_BYU {
     background: none;
 }
 
-.userProfileInner-3F03PX {
+.userProfileInner-1ngKnf {
     border-radius: 6px 6px 0 0;
 }
 
@@ -3069,32 +3073,32 @@ textarea,
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
+.avatarWrapper-eenWra circle, .avatar-3QF_VA.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
 
-.customStatus-3Bvsdb,
-.userTagUsernameNoNickname-2e_xaO,
-.discordIcon-JXet1k,
+.customStatus-19KW6v,
+.userTagUsernameNoNickname-2lKUnI,
+.discordIcon-32mgeP,
 .roleName-2ZJJYR,
-.username-28Thtk {
+.username-3dP0mA {
     color: white;
 }
 
-.discrimBase-KriZSj,
-.discriminator-3_S3CG {
+.discrimBase-v65kTs,
+.discriminator-hnHkyt {
     color: #d4d4d4;
 }
 
@@ -3614,7 +3618,7 @@ textarea,
     color: #FFF88D;
 }
 
-.note-3TX9O7 textarea:focus {
+.note-3M15gE textarea:focus {
     background-color: rgba(0, 0, 0, .09);
 }
 
@@ -4241,7 +4245,7 @@ textarea,
 }
 
 .wrapper-wOVKdL,
-.paymentNote-1JTD1J {
+.paymentNote-3dcb-Z {
   background-color: transparent;
 }
 
@@ -4295,5 +4299,45 @@ textarea,
 }
 
 .bd-sidebar-header h2 {
+    color: white;
+}
+
+.changelog-2zmJ4c,
+.safetyChecklist-3kgSZf,
+.simpleItemWrapper-1Zwc4I {
+  background-color: rgba(0, 0, 0, .7);
+  border: 2px solid rgba(255, 255, 255, .4);
+}
+
+.divider-3gqVNH {
+  background-color: transparent;
+}
+
+
+.valuePill-3nbVvY {
+  background-color: rgba(0, 0, 0, .5);
+  border: 2px solid rgba(255, 255, 255, .4);
+  color: white !important;
+}
+
+.itemBodyInner-3iVT92,
+.rulesScreeningItems-24b_s9>div {
+  border: none;
+}
+
+.bar-1GpknY {
+  background-color: transparent;
+}
+
+.themed-1LCNAV .barInner-3dHef4 {
+  background-color: rgba(255, 255, 255, .6);
+}
+
+.themed-1LCNAV .textLeft-1Noen0, 
+.themed-1LCNAV .textRight-2IW704 {
+  color: white;
+}
+
+.theme-dark .activityUserPopoutV2-3eKqzY .headerText-3g1XK9 {
     color: white;
 }
