--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 2.5
+ * @version 2.6
 */
 
 /* Rem Main Picture */
@@ -254,22 +254,22 @@
     border-radius: 3px;
 }
 
-.userProfileInner-3F03PX:before {
+.userProfileInner-1ngKnf:before {
     background-color: transparent;
 }
 
-.userProfileInnerThemedWithBanner-2624Yx,
-.userProfileInnerThemedNonPremium-1gT-zY,
-.userProfileInnerThemedPremiumWithoutBanner-1yMS1H {
+.userProfileInnerThemedWithBanner-25XGmz,
+.userProfileInnerThemedNonPremium-2AJg-H,
+.userProfileInnerThemedPremiumWithoutBanner-lZ9inp {
     background: url(https://images5.alphacoders.com/734/734070.png) 50%/cover;
 }
 
-.userProfileOuterUnthemed-2b2rsv,
-.userProfileOuterThemed-3EfHmv {
+.userProfileOuterUnthemed-11rPfA,
+.userProfileOuterThemed-2BgJCM {
     background: transparent;
 }
 
-.userPopoutOuter-3AVBmJ {
+.userPopoutOuter-1OHwPL {
     box-shadow: none;
 }
 
@@ -277,7 +277,7 @@
     border-radius: 3px;
 }
 
-.bannerSVGWrapper-qc0szY foreignObject {
+.bannerSVGWrapper-2CLfzN foreignObject {
     mask: none;
 }
 
@@ -287,17 +287,17 @@
     background-color: transparent !important;
 }
 
-.profileBadges-31rDHI {
+.profileBadges-2pItdR {
     background-color: rgba(108, 180, 254, .6);
     border-radius: 4px;
 }
 
-.overlayBackground-1KgwVi {
+.overlayBackground-2aa7wt {
     background-color: rgba(0,0,0,.7);
     border-radius: 4px;
 }
 
-.divider-1tWBgZ {
+.divider-2dDziJ {
     background-color: transparent;
 }
 
@@ -327,7 +327,8 @@
 }
 
 .contentWrapper-3vHNP2,
-.emojiPicker-6YCk8a {
+.emojiPicker-6YCk8a,
+.contentWrapper-2f9yME {
     background-color: #1c1c1c;
     border-radius: 4px;
     box-shadow: none;
@@ -1597,7 +1598,7 @@
     border-radius: 4px;
 }
 
-.tabBarContainer-2UG0vy {
+.tabBarContainer-sCZC4w {
     border-bottom: none;
 }
 
@@ -1606,11 +1607,11 @@
     border-bottom-color: #6cb4fe;
 }
 
-.note-3TX9O7 textarea:focus {
+.note-3M15gE textarea:focus {
     background-color: rgba(255, 255, 255, .09);
 }
 
-.userInfoSection-1gptv0+.userInfoSection-1gptv0 {
+.userInfoSection-2u2hir+.userInfoSection-2u2hir {
     border-top: none;
 }
 
@@ -1618,22 +1619,22 @@
     border-bottom-color: silver;
 }
 
-.connectedAccountContainer-2TWiXT {
+.connectedAccountContainer-3aLMHJ {
     border-radius: 6px;
     background-color: rgba(108, 180, 254, .45);
     border: 1px solid #6cb4fe;
 }
 
-#app-mount .connectedAccountOpenIcon-OngaxI {
+#app-mount .connectedAccountOpenIcon-3i81Tz {
     color: white;
 }
 
 .guildNick-HT7Pgu,
-.listRow-Y5zoF8 {
+.listRow-2nO1T6 {
     color: white;
 }
 
-.listRow-Y5zoF8:hover {
+.listRow-2nO1T6:hover {
     background-color: rgba(108, 180, 254, .3);
 }
 
@@ -2059,7 +2060,8 @@
 }
 
 
-.navButtonActive-1EqC5l {
+.navButtonActive-1EqC5l,
+.navButtonActive-fwiUKp {
     background-color: #6cb4fe !important;
 }
 
@@ -2275,19 +2277,19 @@
     background: none;
 }
 
-.userTagUsernameNoNickname-2e_xaO {
+.userTagUsernameNoNickname-2lKUnI {
     color: white;
 }
 
-.discrimBase-KriZSj {
+.discrimBase-v65kTs {
     color: silver;
 }
 
-.rolePillBorder-RiRiuN {
+.rolePillBorder-3R4Bb5 {
     border-color: #6cb4fe;
 }
 
-.rolePill-2IJ1vo {
+.rolePill-78LFtg {
     background-color: #6cb4fe;
 }
 
@@ -2973,23 +2975,23 @@
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
-#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
+#app-mount .avatarWrapper-eenWra .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj,
+#app-mount .avatar-3QF_VA.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-2KjWnj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
+.avatarWrapper-eenWra circle, .avatar-3QF_VA.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
 
-.badgeList-2pMvZX {
+.badgeList-2aoHPw {
     background-color: rgba(0, 0, 0, .6);
 }
 
@@ -2998,13 +3000,13 @@
   color: white!important;
 }
 
-.customStatus-3Bvsdb,
-.discordIcon-JXet1k,
-.username-28Thtk {
+.customStatus-19KW6v,
+.discordIcon-32mgeP,
+.username-3dP0mA {
     color: white;
 }
 
-.discriminator-3_S3CG {
+.discriminator-hnHkyt {
     color: #d4d4d4;
 }
 
@@ -4092,7 +4094,7 @@
 }
 
 .wrapper-wOVKdL,
-.paymentNote-1JTD1J {
+.paymentNote-3dcb-Z {
   background-color: transparent;
 }
 
@@ -4146,5 +4148,50 @@
 }
 
 .bd-sidebar-header h2 {
+    color: white;
+}
+
+.changelog-2zmJ4c,
+.safetyChecklist-3kgSZf,
+.simpleItemWrapper-1Zwc4I {
+  background-color: rgba(0, 0, 0, .7);
+  border: 2px solid rgba(255, 255, 255, .4);
+}
+
+.divider-3gqVNH {
+  background-color: transparent;
+}
+
+
+.valuePill-3nbVvY {
+  background-color: rgba(0, 0, 0, .5);
+  border: 2px solid rgba(255, 255, 255, .4);
+  color: white !important;
+}
+
+.itemBodyInner-3iVT92,
+.rulesScreeningItems-24b_s9>div {
+  border: none;
+}
+
+.bar-1GpknY {
+  background-color: transparent;
+}
+
+.themed-1LCNAV .barInner-3dHef4 {
+  background-color: rgba(255, 255, 255, .6);
+}
+
+.themed-1LCNAV .textLeft-1Noen0, 
+.themed-1LCNAV .textRight-2IW704 {
+  color: white;
+}
+
+.noIcon-3gSX9V {
+    background-color: rgba(0, 0, 0, .2);
+    color: white;
+}
+
+.theme-dark .activityUserPopoutV2-3eKqzY .headerText-3g1XK9 {
     color: white;
 }
